--- a/manuscript.tex
+++ b/manuscript.tex
@@ -46,7 +46,7 @@ Numerical example for asteroid 4769 Castalia
   $i$ \> Variable number \\
 \end{tabbing}
 
-\section{Introduction}
+\section{Introduction}\label{sec:introduction}
 
 % Motivation for missions/studying asteroids
 Small solar system bodies, such as asteroids and comets, are of significant interest to the scientific community.
@@ -118,7 +118,7 @@ In addition, the generation of the reachable set allows for a more systematic me
 This simple methodology allows for extended transfer trajectories which iteratively approach a desired target orbit.
 
 
-\section{Asteroid Model}
+\section{Asteroid Model}\label{sec:asteroid_model}
 
 \subsection{Shape Model}
 Cite location of shape model database
@@ -129,7 +129,7 @@ Assuming constant rotation rate for asteroid
 
 Mention we're looking at asteroid 4769 Castalia
 
-\subsection{Polyhedron Gravity Model}
+\subsection{Polyhedron Gravity Model}\label{sec:polyhedron_model}
 
 We represent the gravitational potential of the asteroid using a polyhedron gravitation model.
 This model is composed of a polyhedron, a three-dimensional solid body, which is defined by a series of vectors in the body-fixed frame.
@@ -145,26 +145,26 @@ Here, we summarize the key developments and equations required for implementatio
 Consider three vectors \( \vecbf{v}_1, \vecbf{v}_2, \vecbf{v}_3 \), assumed to be ordered in a counterclockwise direction, which define a face.
 It is easy to define the three edges of each face as
 \begin{align}\label{eq:edges}
-	\vecbf{e}_{i+1,i} = \vecbf{v}_{i+1} - \vecbf{v}_i ,
+    \vecbf{e}_{i+1,i} = \vecbf{v}_{i+1} - \vecbf{v}_i ,
 \end{align}
 where the index \( i \in \parenth{1,2,3} \) is used to permute all edges of each face.
 Since each edge is a member of two faces, there exist two edges which are defined in opposite directions between the same vertices.
 We can also define the outward normal vector to face \( f\)  as
 \begin{align}\label{eq:face_normal}
-	\hat{\vecbf{n}}_f &= \parenth{\vecbf{v}_{2} - \vecbf{v}_1} \times \parenth{\vecbf{v}_{3} - \vecbf{v}_2} ,
+    \hat{\vecbf{n}}_f &= \parenth{\vecbf{v}_{2} - \vecbf{v}_1} \times \parenth{\vecbf{v}_{3} - \vecbf{v}_2} ,
 \end{align}
 and the outward facing normal vector to each edge as
 \begin{align}\label{eq:edge_normal}
-	\hat{\vecbf{n}}_{i+1,i}^f &= \parenth{\vecbf{v}_{i+1} - \vecbf{v}_i} \times \hat{\vecbf{n}}_f .
+    \hat{\vecbf{n}}_{i+1,i}^f &= \parenth{\vecbf{v}_{i+1} - \vecbf{v}_i} \times \hat{\vecbf{n}}_f .
 \end{align}
 For each face we define the face dyad \( \vecbf{F}_f \) as
 \begin{align}\label{eq:face_dyad}
-	\vecbf{F}_f &= \hat{\vecbf{n}}_f \hat{\vecbf{n}}_f .
+    \vecbf{F}_f &= \hat{\vecbf{n}}_f \hat{\vecbf{n}}_f .
 \end{align}
 Each edge is a member of two faces and has an outward pointing edge normal vector, given in~\cref{eq:edge_normal}, perpindicular to both the edge and the face normal.
 For the edge connecting the vectors \( \vecbf{v}_1 \) and \( \vecbf{v}_2 \) which are shared between the faces \(A\) and \( B\) the per edge dyad is given by
 \begin{align}\label{eq:edge_dyad}
-	\vecbf{E}_{12} = \hat{\vecbf{n}}_A \hat{\vecbf{n}}_{12}^A + \hat{\vecbf{n}}_B \hat{\vecbf{n}}_{21}^B .
+    \vecbf{E}_{12} = \hat{\vecbf{n}}_A \hat{\vecbf{n}}_{12}^A + \hat{\vecbf{n}}_B \hat{\vecbf{n}}_{21}^B .
 \end{align}
 The edge dyad \( \vecbf{E}_e \) is defined for each edge and a function of the two adjacent faces meeting at the edge.
 The face dyad \( \vecbf{F}_f \) is defined for each face and is a function of the face normal vector.
@@ -172,22 +172,22 @@ The face dyad \( \vecbf{F}_f \) is defined for each face and is a function of th
 Let \( \vecbf{r}_i \) be the vector from the spacecraft to the vertex \( \vecbf{v}_i \) and it's length is \( r_i = \norm{\vecbf{r}_i} \).
 The per-edge factor \( L_e \), for the edge connecting vertices \( \vecbf{v}_i \) and \( \vecbf{v}_j \), with a constant length \( e_{ij} \) is
 \begin{align}\label{eq:edge_factor}
-	L_e &= \ln \frac{r_i + r_j + e_{ij}}{r_i + r_j - e_{ij}}.
+    L_e &= \ln \frac{r_i + r_j + e_{ij}}{r_i + r_j - e_{ij}}.
 \end{align}
 For the face defined by the vertices \( \vecbf{v}_i, \vecbf{v}_j, \vecbf{v}_k \) the per-face factor \( \omega_f \) is
 \begin{align}\label{eq:face_factor}
-	\omega_f &= 2 \arctan \frac{\vecbf{r}_i \cdot \vecbf{r}_j \times \vecbf{r}_k}{r_i r_j r_k + r_i \parenth{\vecbf{r}_j \cdot \vecbf{r}_k} + r_j \parenth{\vecbf{r}_k \cdot \vecbf{r}_i} + r_k \parenth{\vecbf{r}_i \cdot \vecbf{r}_j}} .
+    \omega_f &= 2 \arctan \frac{\vecbf{r}_i \cdot \vecbf{r}_j \times \vecbf{r}_k}{r_i r_j r_k + r_i \parenth{\vecbf{r}_j \cdot \vecbf{r}_k} + r_j \parenth{\vecbf{r}_k \cdot \vecbf{r}_i} + r_k \parenth{\vecbf{r}_i \cdot \vecbf{r}_j}} .
 \end{align}
 The gravitational potential due to a constant density polyhedron is given as
 \begin{align}\label{eq:potential}
-	U(\vecbf{r}) &= 1\frac{1}{2} G \sigma \sum_{e \in \text{edges}} \vecbf{r}_e \cdot \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e - \frac{1}{2}G \sigma \sum_{f \in \text{faces}} \vecbf{r}_f \cdot \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f
+    U(\vecbf{r}) &= 1\frac{1}{2} G \sigma \sum_{e \in \text{edges}} \vecbf{r}_e \cdot \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e - \frac{1}{2}G \sigma \sum_{f \in \text{faces}} \vecbf{r}_f \cdot \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f
 \end{align}
 where \( \vecbf{r}_e, \vecbf{r}_f \) is the vector from the spacecraft to any point on the respective edge or face, \( G\) is the universal gravitational constant, and \( \sigma \) is the constant density of the asteroid.
 Furthermore we can use these definitions to define the attraction, gravity gradient matrix, and Laplacian are defined as
 \begin{align}
-	\nabla U ( \vecbf{r} ) &= -G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e + G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f , \label{eq:attraction}\\
-	\nabla \nabla U ( \vecbf{r} ) &= G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e  \cdot L_e - G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \omega_f , \label{eq:gradient_matrix}\\
-	\nabla^2 U &= -G \sigma \sum_{f \in \text{faces}}  \omega_f \label{eq:laplacian}.
+    \nabla U ( \vecbf{r} ) &= -G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e \cdot \vecbf{r}_e \cdot L_e + G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \vecbf{r}_f \cdot \omega_f , \label{eq:attraction}\\
+    \nabla \nabla U ( \vecbf{r} ) &= G \sigma \sum_{e \in \text{edges}} \vecbf{E}_e  \cdot L_e - G \sigma \sum_{f \in \text{faces}} \vecbf{F}_f \cdot \omega_f , \label{eq:gradient_matrix}\\
+    \nabla^2 U &= -G \sigma \sum_{f \in \text{faces}}  \omega_f \label{eq:laplacian}.
 \end{align}
 
 One interesting thing to note is that both~\cref{eq:face_dyad,eq:edge_dyad} can be precomputed without knowledge of the position of the satellite.
@@ -201,20 +201,25 @@ We use the estimated rotation period of \SI{4.07}{\hour} with a nominal density 
 The shape model is composed of \num{4092} triangular faces and a rendering of the asteroid is provided in~\cref{fig:castalia_3d}.
 In addition, we also show a contour plot of the radius of Castlia in~\cref{fig:radius_contour}.
 \begin{figure}
-	\centering
-	\begin{subfigure}[htbp]{0.5\textwidth}
-		\includegraphics[width=\textwidth]{castalia}
-		\caption{3D Shape Model of Castalia} \label{fig:castalia_3d}
-	\end{subfigure}~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. %(or a blank line to force the subfigure onto a new line)
-	\begin{subfigure}[htbp]{0.5\textwidth}
-		\includegraphics[width=\textwidth]{radius_contour}
-		\caption{Radius contours of Castalia} \label{fig:radius_contour}
-	\end{subfigure} ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. %(or a blank line to force the subfigure onto a new line)
-	\caption{Polyhedron Shape Model of 4769 Castalia}
-	\label{fig:castalia}
+    \centering
+    \begin{subfigure}[htbp]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{castalia}
+        \caption{3D Shape Model of Castalia} \label{fig:castalia_3d}
+    \end{subfigure}~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. %(or a blank line to force the subfigure onto a new line)
+    \begin{subfigure}[htbp]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{radius_contour}
+        \caption{Radius contours of Castalia} \label{fig:radius_contour}
+    \end{subfigure} ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. %(or a blank line to force the subfigure onto a new line)
+    \caption{Polyhedron Shape Model of 4769 Castalia}
+    \label{fig:castalia}
 \end{figure}
 
-\subsection{Spacecraft Equations of Motion}
+
+Mention that our model uses only 1024 faces for speed
+
+Show the plot of the equilibrium position as a function of the number of faces and show that it's where the knee in the curve exists
+
+\subsection{Spacecraft Equations of Motion}\label{sec:sc_eoms}
 
 The motion of a massless particle, or spacecraft, about an asteroid shares many similarities with that of the three-body problem.
 As is typical in the three-body problem, the equations of motion are usually represented in a uniformly rotating frame aligned with the two primaries.
@@ -227,17 +232,17 @@ We define a reference frame originating at the center of mass of the asteroid.
 The body-fixed reference frame is composed of the unit vectors \( \hat{\vecbf{x}} , \hat{\vecbf{y}}, \hat{\vecbf{z}} \), which are aligned along the principal axes of smallest, intermediate, and largest moment of inertia, respectively.
 The body-fixed equations of motion of a massless particle about an arbitrarily rotating asteroid are given by
 \begin{align}\label{eq:body_eoms}
-	\ddot{\vecbf{r}} + 2 \vecbf{\Omega} \times \dot{\vecbf{r}} + \vecbf{\Omega} \times \parenth{ \vecbf{\Omega} \times \vecbf{r} } + \dot{\vecbf{\Omega}} \times \vecbf{r} = U_{\vecbf{r}} ,
+    \ddot{\vecbf{r}} + 2 \vecbf{\Omega} \times \dot{\vecbf{r}} + \vecbf{\Omega} \times \parenth{ \vecbf{\Omega} \times \vecbf{r} } + \dot{\vecbf{\Omega}} \times \vecbf{r} = U_{\vecbf{r}} ,
 \end{align}
 where \( \vecbf{\Omega} \) is the instaneous angular velocity vector of the asteroid represented in the body-fixed frame, \( \vecbf{r} \) is the position of the particle in the body-fixed frame, and \( U_{\vecbf{r}} \) is the gradient of the gravitational potential~\cite{scheeres2012a}.
 We assume that the asteroid rotates at a uniform rate, \( \norm{\vecbf{\Omega}} = \omega \), about the axis of the maximum moment of inertia, \( \vecbf{\Omega} = \omega \hat{\vecbf{z} }\).
 As a result, we can represent the equations of motion in scalar form as
 \begin{align} \label{eq:eoms}
-	\begin{split}
-    	\ddot{x} - 2 \omega \dot{y} - \omega^2 y &= U_x , \\
-    	\ddot{y} + 2 \omega \dot{x} - \omega^2 x &= U_y , \\
-    	\ddot{z} &= U_z .
-	\end{split}
+    \begin{split}
+        \ddot{x} - 2 \omega \dot{y} - \omega^2 y &= U_x , \\
+        \ddot{y} + 2 \omega \dot{x} - \omega^2 x &= U_y , \\
+        \ddot{z} &= U_z .
+    \end{split}
 \end{align}
 
 We assume that in our problem we are modelling a spacecraft rather than a massless particle.
@@ -246,20 +251,20 @@ We further assume that our spacecraft is capable of exerting a translational for
 This is typical of many spacecraft which offer full rotational freedom and can direct a maximum, and potentially varying, thrust in any direction.
 The equations of motion may be rewritten in state space form as
 \begin{align}\label{eq:state_space_eoms}
-	\begin{bmatrix} \dot{\vecbf{r}} \\ \dot{\vecbf{v}} \end{bmatrix} &=
-	\begin{bmatrix}\vecbf{v} \\ \vecbf{g} \parenth{\vecbf{r}} + \vecbf{h}\parenth{\vecbf{v}} + \vecbf{u} \end{bmatrix} ,
+    \begin{bmatrix} \dot{\vecbf{r}} \\ \dot{\vecbf{v}} \end{bmatrix} &=
+    \begin{bmatrix}\vecbf{v} \\ \vecbf{g} \parenth{\vecbf{r}} + \vecbf{h}\parenth{\vecbf{v}} + \vecbf{u} \end{bmatrix} ,
 \end{align}
 where the terms \(\vecbf{g} \parenth{\vecbf{r}} \) and \( \vecbf{h}\parenth{\vecbf{v}} \) are given by
 \begin{align}\label{eq:state_space_terms}
-	\vecbf{g}\parenth{\vecbf{r}} = \begin{bmatrix}  U_x + \omega^2 x \\ U_y + \omega^2 y \\ U_z \end{bmatrix} ,\quad
-	\vecbf{h}\parenth{\vecbf{r}} = \begin{bmatrix} 2 \omega \dot{y} \\ -2 \omega \dot{x} \\ 0 \end{bmatrix} .
+    \vecbf{g}\parenth{\vecbf{r}} = \begin{bmatrix}  U_x + \omega^2 x \\ U_y + \omega^2 y \\ U_z \end{bmatrix} ,\quad
+    \vecbf{h}\parenth{\vecbf{r}} = \begin{bmatrix} 2 \omega \dot{y} \\ -2 \omega \dot{x} \\ 0 \end{bmatrix} .
 \end{align}
 
 Since Castalia is a uniformly rotating asteroid, the equations of motion are time invariant when represented in the body-fixed frame.
 In addition, there exists an integral of motion, or a conserved quantity, the is constant for all motion of a particle, absent any other perturbing forces.
 The Jacobi constant, \( J (\vecbf{r} , \vecbf{v} ) \), is given by
 \begin{align}\label{eq:jacobi}
-	J \parenth{\vecbf{r}, \vecbf{v}} = \frac{1}{2} \omega^2 \parenth{x^2 + y^2} + U(\vecbf{r}) - \frac{1}{2} \parenth{\dot{x}^2 + \dot{y}^2 + \dot{z}^2} .
+    J \parenth{\vecbf{r}, \vecbf{v}} = \frac{1}{2} \omega^2 \parenth{x^2 + y^2} + U(\vecbf{r}) - \frac{1}{2} \parenth{\dot{x}^2 + \dot{y}^2 + \dot{z}^2} .
 \end{align}
 The Jacobi constant functions in a similar manner as used in three-body problem~\cite{szebehely1967}.
 We can define zero-velocity surfaces using the Jacobi constant by fixing the value to a desired constant.
@@ -268,13 +273,100 @@ Just as in the three-body problem, the Jacobi constant in~\cref{eq:jacobi} divid
 Similarly, there exist in general four equilibrium points and also their associated stable and unstable manifolds~\cite{scheeres1996,scheeres1994}.
 The properties of these manifolds play a critical role in the dynamics of trajecotries in their vicinity.
 
-\section{Reachability Set on \Poincare Section}
+\section{Reachability Set on \Poincare Section}\label{sec:reachability}
 
+Typical optimal control methods, including both indirect and direct based methods, are highly dependent on an accurate initial guess.
+For indirect optimization, which is based on the calclus of variations, this results in the well-known two-point boundary value problem.
+Insight into the problem or insight by the designer is usually required to determine appropriate initial costates that will converge to the optimal solution and satisfy the desired constraints.
+To avoid this issue, we utilize the concept of the reachiblity set on a lower dimensional \Poincare section.
+By repeatedly constructing the reachability set we can achieve general transfers by determining set intersections on the \Poincare section.
+This alleviates the need to determine an accurate initial guess while offering some insight into the dynamics of neighboring trajectories
 
+The reachable set contains all possible trajectories that are achievable over a fixed time horizon from a defined initial condition, subject to the constraints of the system.
+Reachability theory has been applied to collision avoidance and safety planning in aerospace systems~\cite{holzinger2009,holzinger2011b}.
+The theory supporting reachabiilty analysis is directly derivable from optimal control theory~\cite{varaiya2000,lygeros2004}.
+Analytic, computation of reachability sets is only possible for a small class of potential systems.
+Here, we use numerical methods to solve an optimal control problem.
+The solution of this optimal control problem approximates a single solution that lies on the reachable set.
+\begin{figure}
+    \centering
+    \begin{scaletikzpicturetowidth}{0.5\textwidth}
+    \begin{tikzpicture}[scale=\tikzscale]
+        \coordinate [label=left:\textcolor{black}{\large \(\vec{x}_0\)}] (x0) at (-1,-2);
+        \coordinate [label=below:\textcolor{black}{\large  \(\vec{x}_n\)}] (xn) at (1,1);
+        \coordinate [label=left:\textcolor{black}{\large  \(\Sigma\)}] (sigma) at (-4,3);
+        %\coordinate [label=below:\textcolor{black}{\large  \(P(\vec{x})\)}] (P) at (0,-3.5);
+        % define the path of the flow with coordinates
+        \coordinate [label=right:\textcolor{black}{}] (f1) at (5,-2);
+        \coordinate [label=below:\textcolor{black}{\large  \(\phi(t,\vec{x}_0)\)}] (f2) at (2,-5);
+        \coordinate [label=right:\textcolor{black}{}] (f3) at (-4,-4);
+        \coordinate [label=right:\textcolor{black}{}] (f4) at (-4,-1);
+        
+    %   \draw[help lines] (-10,-10) grid (10,10); %grid
+        \filldraw [black] (x0) circle [radius=3pt];
+        \filldraw [black] (xn) circle [radius=3pt];
+    
+        \draw [ultra thick,black,->-](x0) to[out=20,in=90,distance=2cm] (f1) to[out=-90,in=0,distance=2cm] (f2) to[out=180,in=-45,distance=2cm] (f3) to[out=135,in=-135,distance=2cm] (f4) ;
+        \draw [ultra thick, black,dashed,->] (f4) to[out=45,in=180,distance=1cm] ($(xn)-(2,0)$);
+        
+        \draw [ultra thick] plot [smooth cycle, tension=0.1, rotate=5] coordinates { (-4,-3) (4,-3) (4,3) (-4,3) };
+    
+        \draw [thick,dashed] (xn) circle [radius=2cm]; % reachability set
+    
+        \draw [thick,->] (xn) -- ($(xn) + (2.5,0)$);
+        \draw [thick,rotate=45,->] (xn) -- ($(xn) + (2.5,0)$);
+        \draw ($(xn) + (1,0)$) arc [start angle=0,end angle=45, radius=1];
+        \node [draw=none] at (2.4,1.5) {\Large \(\theta_d\)};
+        \draw [decorate,decoration={brace,amplitude=5pt},rotate=45] (xn) -- ($(xn) + (2,0)$);
+        \node [draw=none] at ($ (xn) + (0,1) $) {\Large \( J \)};
+    \end{tikzpicture}
+    \end{scaletikzpicturetowidth}
+    \caption{Reachability set on a \Poincare section\label{fig:reachability_set}}
+\end{figure}
+
+We seek to approximate the reachability set on a \Poincare section by solving an optimal control problem.
+The \Poincare section is chosen in a manner similar to the previous work in both the three-body problem as well analysis performed around asteroids to determine periodic orbits.
+Analysis in the three-body problem relies heaviliy on symmetries in the force fields.
+However, in our system model the gravitational potential, given by~\cref{eq:potential}, has no symmetries.
+In spite of this, it is still possible to determine periodic solutions through the application of a \Poincare map with surface of section chosen normal to surface in the phase space~\cite{scheeres2000}.
+For a periodic orbit, the trajectories will intersect the \Poincare section at two distinct points every half orbit.
+With the addition of a low thrust control input, we are able to expand the reachable set from a distinct point to a larger area on the \Poincare section.
+\Cref{fig:reachability_set} illustrates this methodology.
+Without any control input, the trajectories will intersect the \Poincare section at \( \vecbf{x}_n\).
+The addition of a control input allows the spacecraft to depart from the natural dynamics and intersect the section at another location.
+We use the cost function \( J \) to define a distance metric on the \Poincare section.
+Maximization of \( J \), or the minimization of \( -J \), along various directions on the \Poincare section allows us to generate the larges reachability set under the bounded control input.
+
+We define the \Poincare section as the surface normal to \( y = 0 \).
+Following convention, the \Poincare map is defined as the map from one transversal crossing of the surface \( y = 0\) to the next.
+Using the method of Reference~\cite{scheeres2000}, we are able to remove \( y \) and \( \dot{y} \), creating a four-dimensional map.
+The \Poincare section, \( \Sigma \) then becomes
+\begin{align}\label{eq:poincare_section}
+    \Sigma = \braces{\parenth{x, \dot{x}, z, \dot{z}} | y(t_f) = 0 }.
+\end{align}
+We use this section to compute periodic orbits that serve as the initial and target of our transfer.
+In addition, this section serves as a lower dimensional space upon which we approximate the reachability set.
+
+An optimal control problem is defined by the cost function
+\begin{align}\label{eq:cost}
+    J = -\frac{1}{2} \left( \vecbf{x}(t_f) - \vecbf{x}_{n}(t_f)\right)^T 
+    \begin{bmatrix}
+        1 & 0 & 0 & 0 & 0 & 0 \\
+        0 & 0 & 0 & 0 & 0 & 0 \\
+        0 & 0 & 1 & 0 & 0 & 0 \\
+        0 & 0 & 0 & 1 & 0 & 0 \\
+        0 & 0 & 0 & 0 & 0 & 0 \\
+        0 & 0 & 0 & 0 & 0 & 1 \\
+    \end{bmatrix}
+    \left( \vecbf{x}(t_f) - \vecbf{x}_{n}(t_f)\right) ,
+\end{align}
+where \( \vecbf{x}_n(t_f) \) is the final state of a control-free trajectory, while the term \( \vecbf{x}(t_f)\) is the final state of a trajectory under the influence of the control input.
+Maximization of the distance between \( \vecbf{x}_n \) and \(\vecbf{x} \), on the \Poincare section defined in~\cref{eq:poincare_section}, is equivalent to the minimization of \( J \) defined in~\cref{eq:cost}.
+We ensure that the trajectories 
 Define reachability set
 
 Define \Poincare section following the method of Scheeres.
-It is used in the periodic orbit determination~\cite{}
+It is used in the periodic orbit determination.
 
 4 dimensional \Poincare section so we need to discretize the direction using three angles
 
@@ -282,7 +374,7 @@ Formulate OCP to generate the reachability set
 
 Discuss the constraints and angles on the four dimensional space of the section
 
-\section{Numerical Simulation}
+\section{Numerical Simulation}\label{sec:simulation}
 
 Transfer about asteroid Castalia - cite some Scheeres papers
 
@@ -292,7 +384,7 @@ Full trajectory plots
 
 Thruster magnitude is chosen to emulate some real thrusters - cite the Dawn paper
 
-\section{Conclusion}
+\section{Conclusions}\label{sec:conclusions}
 
 
 \section*{Acknowledgments}
