Allow abbreviations for cleveref

--- a/aiaa_packages.sty
+++ b/aiaa_packages.sty
@@ -72,7 +72,7 @@
 % --------------------------------------
 % MUST BE AFTER HYPERREF!!!!!!!!!
 %------------------------------------------
-\usepackage[noabbrev,capitalize]{cleveref} % get fancy referencing
+\usepackage[capitalize]{cleveref} % get fancy referencing
 
 %\usepackage[final]{showlabels} % show labels for referencing
 
